# etl_pipeline

./: README.md  pyproject.toml
adapter/: Untitled.ipynb  builder.py  etl.py  out.csv  sysconfig.txt
